# UtilitiesRoBot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  NOTICE  Procfile  README.md  app.json  bots.session  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: autopep8.yml  black.yml  release.yml  updater.yml
bots/: __init__.py  __main__.py  vars.py
bots/download/: README.md
bots/modules/: binChecker.py  compressor.py  dbUrlMaker.py  dev.py  fakeInfo.py  github.py  github.py.a9d754e2ade00b9b9393bca1097a10d7.tmp  id.py  json.py  ocr.py.bk  paste.py  pdf2img.py  proxyBot.py  proxyGen.py  pyrogram_session.py  rmvBg.py  sessions.py  start.py  telethon_session.py  tinify.py  tr.py  tr.py.txt  tts.py  userid.py
bots/utils/: aiohttp.py  captcha.py  compressImage.py  genFakeInfo.py  getBinInfo.py  joinCheck.py  ocr.py  rmvBg.py  translator.py
minibots/: __init__.py  __main__.py  logger.py  vars.py
minibots/bots/: __init__.py  bincheckerbot.py  fakeinfofenrobot.py  itsproxybot.py  sessiongenbot.py
minibots/utils/: aiohttp_helper.py  common_funcs.py  common_text.py  custom_filters.py  mention_parser.py  paste.py
