[tool.poetry]
name = "utilitiesrobot"
version = "1.0.0"
description = ""
authors = ["Divkix <divkix@divkix.me>", "Jayant Hegde Kageri <jayantkageri@gmail.com>"]

[tool.poetry.dependencies]
python = ">= 3.10, < 3.11"
kantex = "^0.2.0"
Telethon = "^1.28.5"
proxygrab = "^1.2.9"
aiohttp = "^3.8.4"
pdf2image = "^1.16.3"
gTTS = "^2.3.2"
tgEasy = "^1.3.3"
ujson = "^5.7.0"
Pillow = "^9.5.0"
google-trans-new = "^1.1.9"
pypers = "^1.3.4"
removebg = "^0.04"
SQLAlchemy = "^2.0.12"
redis = "^4.5.5"
pymongo = "^4.3.3"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pyclean = "^2.7.0"
pylint = "^2.17.4"
isort = "^5.12.0"
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
