[tool.poetry]
name = "utilitiesrobot"
version = "1.0.0"
description = ""
authors = ["Divkix <divkix@divkix.me>", "Jayant Hegde Kageri <jayantkageri@gmail.com>"]

[tool.poetry.dependencies]
python = ">= 3.10, < 3.11"
kantex = "^0.2.0"
Telethon = "^1.33.1"
proxygrab = "^1.2.9"
aiohttp = "^3.10.5"
pdf2image = "^1.17.0"
gTTS = "^2.5.0"
tgEasy = "^1.3.3"
ujson = "^5.9.0"
Pillow = "^9.5.0"
google-trans-new = "^1.1.9"
pypers = "^1.3.4"
removebg = "^0.04"
SQLAlchemy = "^2.0.25"
redis = "^4.6.0"
pymongo = "^4.6.1"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
pyclean = "^2.7.6"
pylint = "^2.17.7"
isort = "^5.13.2"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
